Quitar LSTM de web

--- a/Lab/templates/includes/_resumen_y_graficas_lstm.html
+++ b/Lab/templates/includes/_resumen_y_graficas_lstm.html
@@ -1,4 +1,4 @@
-<div style="text-align: center;">
+<!-- <div style="text-align: center;">
     <div>
       <pre style="text-align: left;">
         {{ resumen }}
@@ -13,4 +13,4 @@
     <p>Predicción para la próxima sesión:                       {{ prediccion_prox_sesion }}</p>
     <p>En los datos de test se acierta tendencia:               {{ aciertos_tendencia }} veces</p>
     <p>En los datos de test se falla tendencia:                 {{ fallos_tendencia }} veces</p>
-</div>
+</div> -->
