Documentación. Anexos de diseño.

--- a/DashBoard/templates/includes/_tabla_pesos_sharpe_ratio.html
+++ b/DashBoard/templates/includes/_tabla_pesos_sharpe_ratio.html
@@ -13,7 +13,7 @@
 </style>
 
 <div class="caja" style="width: 100%;">
-    <p class="barra">Análisis de distribución de pesos</p>
+    <p class="barra">Análisis de distribución de pesos (según datos de último año)</p>
     <table>
         <thead>
             <tr>
