Tests de integración

--- a/DashBoard/templates/nuevo_seguimiento.html
+++ b/DashBoard/templates/nuevo_seguimiento.html
@@ -14,7 +14,7 @@
 
 
 <div>
-    <br><p class="cabecera">Añadir un nuevo stock a la cartera</p>
+    <br><p class="cabecera">Añadir un nuevo valor a seguir</p>
 </div>
 
 <div class="container">
@@ -22,7 +22,7 @@
         <div class="col-md-6 offset-md-3 mt-5">
 
             <form method="POST" class="card card-body">
-                <h3 class="text-center">Nueva valor a seguir</h1>
+                <h3 class="text-center">Nuevo valor a seguir</h1>
                 <!-- Sólo se muestran los mensajes de error en caso de que existan -->
                 <p style="color: red;">{{ msg_error }}</p>
                 <p style="color: red;">{{ msg_error_2 }}</p>
