Mejoras estéticas y funcionales

--- a/Analysis/templates/chart_y_datos.html
+++ b/Analysis/templates/chart_y_datos.html
@@ -37,14 +37,15 @@ que tiene la página de portada 'home' -->
     <div class="col">
       {% include 'includes/_evolucion_sector.html' %}
     </div>
-    <div id="comparador-container" class="col">
-      {% include 'includes/_comparador.html' %}
-    </div>
-  </div>
-
-  <div class="row">
     <div class="col">
       {% include 'includes/_grafica_retornos.html' %}
+    </div>
+    
+  </div>
+
+  <div class="row"  style="display: flex; align-items: center">
+    <div class="col">
+      {% include 'includes/_comparador.html' %}
     </div>
   </div>
   
