--- a/Analysis/templates/includes/_grafica_retornos.html
+++ b/Analysis/templates/includes/_grafica_retornos.html
@@ -1,10 +1,15 @@
 <!-- templates/includes/_grafica_retornos.html -->
 
-<!-- Si el usuario está autenticado muestro info de correlaciones -->
-{% if user.is_authenticated %}
+<style>
+
+  .responsive-image {
+              max-width: 100%;
+              height: auto;
+          }
+  </style>
+  
 <p class="barra">Distribución de retornos (variaciones diarias en %) del último año</p>
 
-<div id="grafica_retornos" >
-  <img src="data:image/png;base64,{{ grafica_retornos }}" alt="ImagenRetornos">
+<div class="image-container" id="grafica_retornos" >
+  <img src="data:image/png;base64,{{ grafica_retornos }}" alt="ImagenRetornos" class="responsive-image">
 </div>
-{% endif %}
