--- a/DashBoard/templates/includes/_histograma_monedas.html
+++ b/DashBoard/templates/includes/_histograma_monedas.html
@@ -25,7 +25,7 @@
 
 <!-- Histograma con Chart.js -->
 <div class="caja">
-    <p class="barra">Distribución por divisa</p>
+    <p class="barra">Distribución por divisa (ajustado a precios de última sesión)</p>
     <canvas id="histograma"></canvas>
 </div>
 
